docs: update swagger content
